--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
         "postcss-import": "^15.1.0",
         "tailwindcss": "^3.1.0",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "swiper": "^11.2.5"
     }
 }
