--- a/package.json
+++ b/package.json
@@ -8,24 +8,23 @@
     "devDependencies": {
         "@alpinejs/collapse": "^3.14.9",
         "@tailwindcss/forms": "^0.5.2",
-        "@tailwindcss/vite": "^4.0.0",
         "alpinejs": "^3.14.9",
         "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.2.0",
         "perfect-scrollbar": "^1.5.6",
         "postcss": "^8.4.31",
         "postcss-import": "^15.1.0",
         "tailwindcss": "^3.1.0",
+        "terser-webpack-plugin": "^5.3.14",
         "vite": "^6.0.11",
         "vite-plugin-compression": "^0.5.1"
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.7.2",
         "flowbite": "^3.1.2",
-        "keen-slider": "^6.8.6",
-        "swiper": "^11.2.6",
-        "taos": "^1.0.5"
+        "swiper": "^11.2.6"
     }
 }
